(hybris) configs: enable CONFIG_EXT4_FS_POSIX_ACL in hybris defconfigs
Needed for AppSupport container to be able to set default mask/group
for external storage folders. JB#59542

--- a/arch/arm64/configs/aosp_kumano_bahamut_defconfig
+++ b/arch/arm64/configs/aosp_kumano_bahamut_defconfig
@@ -855,6 +855,7 @@ CONFIG_VETH=y
 CONFIG_MACVLAN=y
 CONFIG_VLAN_8021Q=y
 CONFIG_BLOCK=y
+CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_LZ4=y
 CONFIG_SQUASHFS_XATTR=y
